<resources>
    <string-array name="etapes_montage">
        <item>Auto</item>
        <item>Filtres</item>
        <item>Audio</item>
        <item>Texte</item>
        <item>Vitesse</item>
        <item>Publier</item>
    </string-array>
    <string-array name="liste_effets">
        <item>Aucun</item>
        <item>Flou</item>
        <item>Gris</item>
        <item>Négatif</item>
        <item>Sépia</item>
    </string-array>
    <string name="app_name">Vakoze</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">L\'adresse email est invalide</string>
    <string name="error_invalid_password">le mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_not_similar_password">les mot de passe sont différents</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Some permissions are needed for a good user experience with Vakoze."
    </string>
    <string name="facebook_app_id">170897913109463</string>
    <string name="fb_login_protocol_scheme">fb170897913109463</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="connexion">Identification</string>
    <string name="inscription">Inscription</string>
    <string name="logo_de_l_application">Logo de l\'application</string>
    <string name="prenom">Prénom</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_main">Vakoze</string>
    <string name="actualite">Actualités</string>
    <string name="tab_text_2">Profil</string>
    <string name="tab_text_3">Communauté</string>
    <string name="tab_text_4">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notifications_pending">Vous n\'avez aucune notifcation</string>
    <string name="no_messages_pending">Vous n\'avez aucun message</string>
    <string name="mettre_en_ligne">Mettre en ligne</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="ff">ff</string>
    <string name="next">next</string>
    <string name="send">send</string>
    <string name="rew">rew</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="send_video_title">Envoyez votre vidéo</string>
    <string name="dialog_message">Complétez les informations de votre vidéo</string>
    <string name="nomVideo">Titre de la vidéo</string>
    <string name="tagsVideo">Descriptif</string>
    <string name="error_incorrect_email">Cette adresse Email est incorrecte</string>
    <string name="foo">foo</string>
    <string name="duration">00:00</string>
    <string name="chat">Chat</string>
    <string name="todo">TODO</string>
    <string name="envoyer">Envoyer</string>
    <string name="activity_title_edit">Filters</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="android_textoff">android:textOff=</string>
    <string name="textview">TextView</string>
    <string name="title_activity_users_map">Les kozeurs proches</string>
    <string name="title_activity_video_edit">VideoEditActivity</string>
    <string name="warning_empty_gallery">Gallery is Empty</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_stop">Stop</string>
    <string name="image_button_play">Start playing button.</string>
    <string name="streaming_server_default_ip">10.125.226.116</string>
    <string name="streaming_server_default_port">1935</string>
    <string name="streaming_server_default_app">live</string>
    <string name="streaming_server_default_stream">mp4:test</string>
    <string name="grayscale_text">grayscale</string>
    <string-array name="effects_names">
        <item>No effect</item>
        <item>Grayscale</item>
        <item>Inverse</item>
        <item>Sepia</item>
        <item>Text</item>
    </string-array>
    <string-array name="frame_size_values">
        <item>640 x 480</item>
        <item>1024 x 768</item>
        <item>1280 x 720</item>
    </string-array>
    <string-array name="video_bit_rate_values">
        <item>5000</item>
        <item>4000</item>
        <item>3000</item>
        <item>2000</item>
        <item>1000</item>
    </string-array>
    <string name="open">Open</string>
    <string name="transcode_video">Transcode Video</string>
    <string name="join_video">Join Video</string>
    <string name="cut_video">Cut Video</string>
    <string name="video_effect">Video Effect</string>
    <string name="audio_effect">Audio Effect</string>
    <string name="media_file_info">Media File Info</string>
    <string name="time_scaling">Time Scaling</string>
</resources>