<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:maxHeight="175dp"
        android:minHeight="175dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo" />
    <TextView android:gravity="center_vertical|center_horizontal" android:layout_height="wrap_content" android:text="@string/textview" android:layout_width="fill_parent" android:id="@+id/songName"></TextView>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/playPauseButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/play_pause_button"
            android:textOn="@string/android_textoff" android:layout_marginStart="5dp">
        </ToggleButton>

        <TextView
            android:id="@+id/musicCurrentLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" android:layout_marginStart="5dp">
        </TextView>

        <SeekBar
            android:id="@+id/musicSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" android:layout_marginStart="5dp">
        </SeekBar>

        <TextView
            android:id="@+id/musicDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" android:layout_marginStart="5dp">
        </TextView>

        <ImageButton
            android:id="@+id/shufflebutton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_reposts2" android:contentDescription="@string/todo" android:layout_marginStart="5dp" />
    </LinearLayout>
</LinearLayout>